fix mobile responsive & update readme file

--- a/src/styles/scss/components/_button.scss
+++ b/src/styles/scss/components/_button.scss
@@ -16,6 +16,10 @@
     //Change for the <button> element
     border: none;
     cursor: pointer;
+
+    @include media("<=tablet") {
+      width: 100%;
+    }
   }
 
   &:hover {
