--- a/src/styles/scss/components/_form.scss
+++ b/src/styles/scss/components/_form.scss
@@ -17,6 +17,10 @@
     -webkit-appearance: none;
     box-shadow: none !important;
 
+    @include media("<=tablet") {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       border: 1px solid $color-black;
