--- a/src/styles/scss/pages/_app.scss
+++ b/src/styles/scss/pages/_app.scss
@@ -5,9 +5,18 @@
   align-items: center;
   margin-top: 15vh;
 
+  @include media("<=tablet") {
+    margin-top: 10vh;
+  }
+
   .logo {
     text-align: center;
     margin-bottom: 10vh;
+
+    @include media("<=tablet") {
+      margin-bottom: 8vh;
+    }
+
     img {
       width: 50%;
     }
@@ -20,6 +29,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @include media("<=tablet") {
+    width: 100%;
+  }
 
   &__header {
     text-align: center;
@@ -58,6 +71,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include media("<=tablet") {
+      width: 100%;
+    }
 
     .form__group {
       display: flex;
