--- a/src/styles/scss/components/_form.scss
+++ b/src/styles/scss/components/_form.scss
@@ -67,6 +67,10 @@
     position: relative;
     width: 195px;
 
+    @include media("<=tablet") {
+      width: 48%;
+    }
+
     &:hover {
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
     }
